--- a/files/en-us/learn/accessibility/what_is_accessibility/index.html
+++ b/files/en-us/learn/accessibility/what_is_accessibility/index.html
@@ -120,7 +120,7 @@ tags:
   <li>Designing with <a href="/en-US/docs/Web/Accessibility/Cognitive_accessibility">cognitive accessibility</a> will lead to good design practices. They will benefit everyone.</li>
   <li>Many people with cognitive impairments also have physical disabilities. Websites must conform with the W3C’s <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines</a>, including <a href="/en-US/docs/Web/Accessibility/Cognitive_accessibility#guidelines">cognitive accessibility guidelines</a>.</li>
   <li>The W3C’s <a href="https://www.w3.org/WAI/GL/task-forces/coga/">Cognitive and Learning Disabilities Accessibility Task Force</a> produces web accessibility guidelines for people with cognitive impairments.</li>
-  <li>WebAIM has a <a href="https://webaim.org/articles/cognitive/">Cognitive page</a> of relevant information and resources<a name="_GoBack"></a>.</li>
+  <li>WebAIM has a <a href="https://webaim.org/articles/cognitive/">Cognitive page</a> of relevant information and resources.</li>
   <li>The United States Centers for Disease Control estimate that, as of 2018, 1 in 4 US citizens have a disability and, of them, <a href="https://www.cdc.gov/media/releases/2018/p0816-disability.html">cognitive impairment is the most common for young people</a>.</li>
   <li>In the US, some intellectual disabilities have historically been referred to as "mental retardation." Many now consider this term disparaging, so its use should be avoided.</li>
   <li>In the UK, some intellectual disabilities are referred to as "learning disabilities" or "learning difficulties".</li>
