--- a/files/en-us/learn/common_questions/available_text_editors/index.html
+++ b/files/en-us/learn/common_questions/available_text_editors/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>In this article we highlight some things to think about when installing a text editor for web development.</p>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
