--- a/files/en-us/learn/common_questions/common_web_layouts/index.html
+++ b/files/en-us/learn/common_questions/common_web_layouts/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>When designing pages for your website, it's good to have an idea of the most common layouts.</p>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
