--- a/files/en-us/learn/common_questions/design_for_all_types_of_users/index.html
+++ b/files/en-us/learn/common_questions/design_for_all_types_of_users/index.html
@@ -13,7 +13,7 @@ tags:
 
 <p>This article provides basic tips to help you design websites for any kind of user.</p>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
