--- a/files/en-us/learn/common_questions/upload_files_to_a_web_server/index.html
+++ b/files/en-us/learn/common_questions/upload_files_to_a_web_server/index.html
@@ -119,7 +119,7 @@ tags:
 
 <p><img alt="Here we go: our website is live!" src="here-we-go.png"></p>
 
-<p>And <em lang="fr">voilà</em>! Our website is live!</p>
+<p>And our website is live!</p>
 
 <h2 id="Rsync">Rsync</h2>
 
