--- a/files/en-us/learn/common_questions/using_github_pages/index.html
+++ b/files/en-us/learn/common_questions/using_github_pages/index.html
@@ -76,7 +76,7 @@ tags:
 <ol>
  <li>On the current page, you are interested in the section <em>…or push an existing repository from the command line</em>. You should see two lines of code listed in this section. Copy the whole of the first line, paste it into the command line, and press Enter. The command should look something like this:
 
-  <pre class="copyable-terminal-content js-zeroclipboard-target"><span class="user-select-contain">git remote add origin <span class="js-live-clone-url">https://github.com/chrisdavidmills/my-repository.git</span></span></pre>
+  <pre class="brush: bash">git remote add origin https://github.com/chrisdavidmills/my-repository.git</pre>
  </li>
  <li>Next, type the following two commands, pressing Enter after each one. These prepare the code for uploading to GitHub, and ask Git to manage these files.
   <pre class="brush: bash">git add --all
