--- a/files/en-us/learn/common_questions/what_is_accessibility/index.html
+++ b/files/en-us/learn/common_questions/what_is_accessibility/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>This article introduces the basic concepts behind web accessibility.</p>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
