--- a/files/en-us/learn/common_questions/what_software_do_i_need/index.html
+++ b/files/en-us/learn/common_questions/what_software_do_i_need/index.html
@@ -9,7 +9,7 @@ tags:
 
 <p>In this article, we lay out which software components you need when you're editing, uploading, or viewing a website.</p>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
