--- a/files/en-us/learn/html/cheatsheet/index.html
+++ b/files/en-us/learn/html/cheatsheet/index.html
@@ -184,7 +184,7 @@ This text is in predefined format.</pre>
 
 <p>"Block elements," on the other hand, take up the entire width of a webpage. They also take up a full line of a webpage; they do not fit together side-by-side. Instead, they stack like paragraphs in an essay or toy blocks in a tower.</p>
 
-<table class="nostripe standard-table">
+<table class="standard-table">
  <thead>
   <tr>
    <th scope="col">Usage</th>
