--- a/files/en-us/learn/html/howto/define_terms_with_html/index.html
+++ b/files/en-us/learn/html/howto/define_terms_with_html/index.html
@@ -11,7 +11,7 @@ tags:
 <p>HTML provides several ways to convey description semantics,  whether inline or as structured glossaries. In this article, we'll cover how to properly mark up keywords when you're defining them.</p>
 </div>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
