--- a/files/en-us/learn/html/introduction_to_html/creating_hyperlinks/index.html
+++ b/files/en-us/learn/html/introduction_to_html/creating_hyperlinks/index.html
@@ -57,7 +57,7 @@ tags:
 
 <p>This gives us the following result:</p>
 
-<p>I'm creating a link to <a class="ignore-external" href="https://www.mozilla.org/en-US/">the Mozilla homepage</a>.</p>
+<p>I'm creating a link to <a href="https://www.mozilla.org/en-US/">the Mozilla homepage</a>.</p>
 
 <h3 id="Adding_supporting_information_with_the_title_attribute">Adding supporting information with the title attribute</h3>
 
@@ -71,7 +71,7 @@ tags:
 
 <p>This gives us the following result and hovering over the link displays the title as a tooltip.</p>
 
-<p>I'm creating a link to <a class="ignore-external" href="https://www.mozilla.org/en-US/" title="The best place to find more information about Mozilla's mission and how to contribute">the Mozilla homepage</a>.</p>
+<p>I'm creating a link to <a href="https://www.mozilla.org/en-US/">the Mozilla homepage</a>.</p>
 
 <div class="note">
 <p><strong>Note:</strong> A link title is only revealed on mouse hover, which means that people relying on keyboard controls or touchscreens to navigate web pages will have difficulty accessing title information. If a title's information is truly important to the usability of the page, then you should present it in a manner that will be accessible to all users, for example by putting it in the regular text.</p>
