--- a/files/en-us/learn/html/multimedia_and_embedding/responsive_images/index.html
+++ b/files/en-us/learn/html/multimedia_and_embedding/responsive_images/index.html
@@ -28,7 +28,7 @@ tags:
 
 <p>In this article, we'll learn about the concept of responsive images — images that work well on devices with widely differing screen sizes, resolutions, and other such features — and look at what tools HTML provides to help implement them. This helps to improve performance across different devices. Responsive images are just one part of <a href="/en-US/docs/Learn/CSS/CSS_layout/Responsive_Design">responsive design</a>, a future CSS topic for you to learn.</p>
 
-<table class="learn-box nostripe standard-table">
+<table class="standard-table">
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
