--- a/files/en-us/learn/html/multimedia_and_embedding/video_and_audio_content/index.html
+++ b/files/en-us/learn/html/multimedia_and_embedding/video_and_audio_content/index.html
@@ -227,7 +227,7 @@ tags:
 
 <p>A typical WebVTT file will look something like this:</p>
 
-<pre class="eval line-numbers  language-html"><code class="language-html">WEBVTT
+<pre class="brush: plain">WEBVTT
 
 1
 00:00:22.230 --&gt; 00:00:24.606
@@ -237,7 +237,7 @@ This is the first subtitle.
 00:00:30.739 --&gt; 00:00:34.074
 This is the second.
 
-  ...</code>
+  ...
 </pre>
 
 <p>To get this displayed along with the HTML media playback, you need to:</p>
