--- a/files/en-us/learn/javascript/asynchronous/promises/index.html
+++ b/files/en-us/learn/javascript/asynchronous/promises/index.html
@@ -20,7 +20,7 @@ tags:
 
 <p><strong>Promises</strong> are a comparatively new feature of the JavaScript language that allow you to defer further actions until after a previous action has completed, or respond to its failure. This is useful for setting up a sequence of async operations to work correctly. This article shows you how promises work, how you'll see them in use with web APIs, and how to write your own.</p>
 
-<table class="learn-box">
+<table>
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
