--- a/files/en-us/learn/javascript/first_steps/variables/index.html
+++ b/files/en-us/learn/javascript/first_steps/variables/index.html
@@ -21,7 +21,7 @@ tags:
 
 <p>After reading the last couple of articles you should now know what JavaScript is, what it can do for you, how you use it alongside other web technologies, and what its main features look like from a high level. In this article, we will get down to the real basics, looking at how to work with the most basic building blocks of JavaScript — Variables.</p>
 
-<table class="learn-box">
+<table>
  <tbody>
   <tr>
    <th scope="row">Prerequisites:</th>
