--- a/files/en-us/learn/server-side/django/development_environment/index.html
+++ b/files/en-us/learn/server-side/django/development_environment/index.html
@@ -124,7 +124,7 @@ tags:
 
 <p>Ubuntu Linux 20.04 LTS includes Python 3.8.5 by default. You can confirm this by running the following command in the bash terminal:</p>
 
-<pre class="brush: sh">python3 -V
+<pre class="brush: bash">python3 -V
  Python 3.8.5</pre>
 
 <p>However, the Python Package Index tool (<em>pip3</em>) you'll need to install packages for Python 3 (including Django) is <strong>not</strong> available by default. You can install <em>pip3</em> in the bash terminal using:</p>
@@ -136,7 +136,7 @@ tags:
 
 <p>macOS "El Capitan" and other more recent versions do not include Python 3. You can confirm this by running the following commands in the zsh or bash terminal:</p>
 
-<pre class="brush: bash">$ python3 -V 
+<pre class="brush: bash">$ python3 -V
   python3: command not found</pre>
 
 <p>You can easily install Python 3 (along with the <em>pip3</em> tool) from<a href="https://www.python.org/"> python.org</a>:</p>
