--- a/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/react_accessibility/index.html
+++ b/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/react_accessibility/index.html
@@ -33,7 +33,7 @@ tags:
  </tbody>
 </table>
 
-<h2 id="Including_keyboard_users"><span class="author-d-1gg9uz65z1iz85zgdz68zmqkz84zo2qovvlb5z71z71z86zgz69zz79z4z67z49z87zz71ziz80zz77z8z67zz83ztz83zz79zz84zz73zbi2">Including keyboard users</span></h2>
+<h2 id="Including_keyboard_users">Including keyboard users</h2>
 
 <p>At this point, we've accomplished all of the features we set out to implement. A user can add a new task, check and uncheck tasks, delete tasks, or edit task names. And they can filter their task list by all, active, or completed tasks.</p>
 
