--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/automated_testing/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/automated_testing/index.html
@@ -235,13 +235,13 @@ const csslint = require('gulp-csslint');</pre>
 
 <ol>
  <li>Install using the following lines:
-  <pre class="editor editor-colors">npm install --save-dev gulp-babel @babel/preset-env
+  <pre class="brush: bash">npm install --save-dev gulp-babel @babel/preset-env
 npm install --save-dev @babel/core
 npm install jshint gulp-jshint --save-dev
 </pre>
  </li>
  <li>Add the following dependencies to <code>gulpfile.js</code>:
-  <pre class="brush: js editor editor-colors">const babel = require('gulp-babel');
+  <pre class="brush: js">const babel = require('gulp-babel');
 const jshint = require('gulp-jshint');
 </pre>
  </li>
