--- a/files/en-us/learn/css/css_layout/flexbox/index.html
+++ b/files/en-us/learn/css/css_layout/flexbox/index.html
@@ -75,7 +75,7 @@ tags:
 
 <p>When elements are laid out as flex items, they are laid out along two axes:</p>
 
-<p><img class="default internal" src="flex_terms.png"></p>
+<p><img src="flex_terms.png"></p>
 
 <ul>
  <li>The <strong>main axis</strong> is the axis running in the direction the flex items are laid out in (for example, as rows across the page, or columns down the page.) The start and end of this axis are called the <strong>main start</strong> and <strong>main end</strong>.</li>
