--- a/files/en-us/learn/html/tables/advanced/index.html
+++ b/files/en-us/learn/html/tables/advanced/index.html
@@ -352,13 +352,13 @@ tfoot {
 
 <p>This section of the article provides further techniques for making tables as accessible as possible.</p>
 
-<h3 class="attTitle" id="Using_column_and_row_headers">Using column and row headers</h3>
+<h3 id="Using_column_and_row_headers">Using column and row headers</h3>
 
 <p>Screenreaders will identify all headers and use them to make programmatic associations between those headers and the cells they relate to. The combination of column and row headers will identify and interpret the data in each cell so that screenreader users can interpret the table similarly to how a sighted user does.</p>
 
 <p>We already covered headers in our previous article — see <a href="/en-US/docs/Learn/HTML/Tables/Basics#adding_headers_with_%3cth%3e_elements">Adding headers with &lt;th&gt; elements</a>.</p>
 
-<h3 class="attTitle" id="The_scope_attribute">The scope attribute</h3>
+<h3 id="The_scope_attribute">The scope attribute</h3>
 
 <p>A new topic for this article is the {{htmlattrxref("scope","th")}} attribute, which can be added to the <code>&lt;th&gt;</code> element to tell screenreaders exactly what cells the header is a header for — is it a header for the row it is in, or the column, for example? Looking back to our spending record example from earlier on, you could unambiguously define the column headers as column headers like this:</p>
 
@@ -386,7 +386,7 @@ tfoot {
 
 <p><code>scope</code> has two more possible values — <code>colgroup</code> and <code>rowgroup</code>. these are used for headings that sit over the top of multiple columns or rows. If you look back at the "Items Sold August 2016" table at the start of this section of the article, you'll see that the "Clothes" cell sits above the "Trousers", "Skirts", and "Dresses" cells. All of these cells should be marked up as headers (<code>&lt;th&gt;</code>), but "Clothes" is a heading that sits over the top and defines the other three subheadings. "Clothes" therefore should get an attribute of <code>scope="colgroup"</code>, whereas the others would get an attribute of <code>scope="col"</code>.</p>
 
-<h3 class="attTitle" id="The_id_and_headers_attributes">The id and headers attributes</h3>
+<h3 id="The_id_and_headers_attributes">The id and headers attributes</h3>
 
 <p>An alternative to using the <code>scope</code> attribute is to use {{htmlattrxref("id")}} and {{htmlattrxref("headers", "td")}} attributes to create associations between headers and cells. The way they are used is as follows:</p>
 
