--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/your_own_automation_environment/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/your_own_automation_environment/index.html
@@ -233,7 +233,7 @@ var driver = new webdriver.Builder()
 
 <p>To load the page you actually want to test, you use the <code>get()</code> method of the driver instance you created earlier, for example:</p>
 
-<pre class="brush: js"><span class="nx">driver</span><span class="p">.</span><span class="nx">get</span><span class="p">(</span><span class="s1">'http://www.google.com'</span><span class="p">);</span></pre>
+<pre class="brush: js">driver.get('http://www.google.com');</pre>
 
 <div class="note">
 <p><strong>Note:</strong> See the <a href="https://seleniumhq.github.io/selenium/docs/api/javascript/module/selenium-webdriver/lib/webdriver_exports_WebDriver.html">WebDriver class reference</a> for details of the features in this section and the ones below it.</p>
@@ -257,17 +257,17 @@ var driver = new webdriver.Builder()
 
 <p>Now we've got a document to test, we need to interact with it in some way, which usually involves first selecting a specific element to test something about. You can <a href="https://www.seleniumhq.org/docs/03_webdriver.jsp#locating-ui-elements-webelements">select UI elements in many ways</a> in WebDriver, including by ID, class, element name, etc. The actual selection is done by the <code>findElement()</code> method, which accepts as a parameter a selection method. For example, to select an element by ID:</p>
 
-<pre class="brush: js"><span class="kd">const</span> <span class="nx">element</span> <span class="o">=</span> <span class="nx">driver</span><span class="p">.</span><span class="nx">findElement</span><span class="p">(</span><span class="nx">By</span><span class="p">.</span><span class="nx">id</span><span class="p">(</span><span class="s1">'myElementId'</span><span class="p">));</span></pre>
+<pre class="brush: js">const element = driver.findElement(By.id('myElementId'));</pre>
 
 <p>One of the most useful ways to find an element by CSS — the  By.css method allows you to select an element using a CSS selector</p>
 
 <p>Enter the following at the bottom of your <code>quick_test.js</code> code now:</p>
 
-<pre class="brush: js"><span class="kd">const</span> <span class="nx">button</span> <span class="o">=</span> <span class="nx">driver</span><span class="p">.</span><span class="nx">findElement</span><span class="p">(</span><span class="nx">By</span><span class="p">.</span><span class="nx">css</span><span class="p">(</span><span class="s1">'</span>button:nth-of-type(1)<span class="s1">'</span><span class="p">));</span></pre>
+<pre class="brush: js">const button = driver.findElement(By.css('button:nth-of-type(1)'));</pre>
 
-<h3 id="Testing_your_element"><span class="p">Testing your element</span></h3>
+<h3 id="Testing_your_element">Testing your element</h3>
 
-<p><span class="p">There are many ways to interact with your web documents and elements on them. You can see useful common examples starting at <a href="https://www.seleniumhq.org/docs/03_webdriver.jsp#getting-text-values">Getting text values</a> on the </span>WebDriver docs.</p>
+<p>There are many ways to interact with your web documents and elements on them. You can see useful common examples starting at <a href="https://www.seleniumhq.org/docs/03_webdriver.jsp#getting-text-values">Getting text values</a> on the WebDriver docs.</p>
 
 <p>If we wanted to get the text inside our button, we could do this:</p>
 
@@ -277,13 +277,13 @@ var driver = new webdriver.Builder()
 
 <p>Add this to <code>quick_test.js</code> now.</p>
 
-<p><span class="p">Making sure you are inside your project directory, try running the test:</span></p>
+<p>Making sure you are inside your project directory, try running the test:</p>
 
-<pre class="brush: bash"><span class="p">node quick_test.js</span></pre>
+<pre class="brush: bash">node quick_test.js</pre>
 
-<p><span class="p">You should see the button's text label reported inside the console.</span></p>
+<p>You should see the button's text label reported inside the console.</p>
 
-<p><span class="p">let's do something a bit more useful. delete the previous code entry, then add this line at the bottom instead:</span></p>
+<p>let's do something a bit more useful. delete the previous code entry, then add this line at the bottom instead:</p>
 
 <pre class="brush: js">button.click();</pre>
 
@@ -301,8 +301,8 @@ alert.accept();</pre>
 
 <p>Next, let's try entering some text into one of the form elements. Add the following code and try running your test again:</p>
 
-<pre class="brush: js"><span class="kd">const</span> input <span class="o">=</span> <span class="nx">driver</span><span class="p">.</span><span class="nx">findElement</span><span class="p">(</span><span class="nx">By</span><span class="p">.</span><span class="nx">id</span><span class="p">(</span><span class="s1">'name'</span><span class="p">));
-input.</span>sendKeys('Filling in my form');</pre>
+<pre class="brush: js">const input = driver.findElement(By.id('name'));
+input.sendKeys('Filling in my form');</pre>
 
 <p>You can submit key presses that can't be represented by normal characters using properties of the <code>webdriver.Key</code> object. For example, above we used this construct to tab out of the form input before submitting it:</p>
 
@@ -350,9 +350,9 @@ input.</span>sendKeys('Filling in my form');</pre>
 
 <p>After you've finished running a test, you should shut down any driver instances you've opened, to make sure that you don't end up with loads of rogue browser instances open on your machine! This is done using the <code>quit()</code> method. Call this on your driver instance when you are finished with it. Add this line to the bottom of your <code>quick_test.js</code> test now:</p>
 
-<pre class="brush: js"><span class="nx">driver</span><span class="p">.</span><span class="nx">quit</span><span class="p">();</span></pre>
+<pre class="brush: js">driver.quit();</pre>
 
-<p><span class="p">When you run it, you should now see the test execute and the browser instance shut down again after the test is complete. This is useful for not cluttering up your computer with loads of browser instances, especially if you have so many that it is causing the computer to slow down.</span></p>
+<p>When you run it, you should now see the test execute and the browser instance shut down again after the test is complete. This is useful for not cluttering up your computer with loads of browser instances, especially if you have so many that it is causing the computer to slow down.</p>
 
 <h2 id="Test_best_practices">Test best practices</h2>
 
