--- a/files/en-us/learn/javascript/asynchronous/introducing/index.html
+++ b/files/en-us/learn/javascript/asynchronous/introducing/index.html
@@ -79,7 +79,7 @@ btn.addEventListener('click', () =&gt; {
 
 <p>For reasons illustrated earlier (e.g. related to blocking), many Web API features now use asynchronous code to run, especially those that access or fetch some kind of resource from an external device, such as fetching a file from the network, accessing a database and returning data from it, accessing a video stream from a web cam, or broadcasting the display to a VR headset.</p>
 
-<p>Why is this difficult to get to work using synchronous code? Let's look at a quick example. When you fetch an image from a server, you can't return the result immediately. That means that the following (pseudocode) wouldn't work:</p>
+<p>Why is this difficult to get to work using asynchronous code? Let's look at a quick example. When you fetch an image from a server, you can't return the result immediately. That means that the following (pseudocode) wouldn't work:</p>
 
 <pre class="brush: js">let response = fetch('myImage.png'); // fetch is asynchronous
 let blob = response.blob();
